@@ -5,11 +5,8 @@
       <a href="http://gna.org/projects/cal3d/">The Cal3D Team</a>
       with
       <a href="http://www.doxygen.org/index.html">
-        <img src="doxygen.gif" alt="doxygen" align="middle" border=0 width=110 height=53>
+      Doxygen $doxygenversion
       </a>
-      $doxygenversion
-      &copy;&nbsp;1997-2001
-      <a href="mailto:dimitri@stack.nl">Dimitri van Heesch</a>
     </small>
   </center>
 </body>
